plugins/kotlin/idea/tests/testData/checker/SuppressedHighlighting.kt
// SUPPRESS_HIGHLIGHTING
fun foo() {
    <selection>install(XXX)</selection>

    <error descr="[UNRESOLVED_REFERENCE]">install</error>(<error descr="[UNRESOLVED_REFERENCE]">XXX</error>)
}